--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markedit-theming",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Create custom MarkEdit themes easily.",
   "scripts": {
     "lint": "eslint . --config eslint.config.mjs",
@@ -16,6 +16,7 @@
     "@codemirror/search": "^6.0.0",
     "@codemirror/state": "^6.0.0",
     "@codemirror/view": "^6.0.0",
+    "@lezer/highlight": "^1.0.0",
     "@lezer/markdown": "^1.0.0",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
