--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "types": "./dist/index.d.ts",
   "license": "MIT",
   "devDependencies": {
+    "@codemirror/autocomplete": "^6.0.0",
     "@codemirror/commands": "^6.0.0",
     "@codemirror/language": "^6.0.0",
+    "@codemirror/lang-markdown": "^6.0.0",
     "@codemirror/search": "^6.0.0",
     "@codemirror/state": "^6.0.0",
     "@codemirror/view": "^6.0.0",
@@ -22,7 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "eslint": "^9.30.1",
-    "markedit-api": "https://github.com/MarkEdit-app/MarkEdit-api#v0.11.0",
+    "markedit-api": "https://github.com/MarkEdit-app/MarkEdit-api#v0.14.0",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite": "^7.0.0"
